# Shelf

./: .gitignore  Cargo.toml  LICENSE  README.md  build-app.sh
src/: app.rs  export.rs  main.rs  model.rs  persist.rs  scanner.rs
src/ui/: library.rs  mod.rs  reader.rs  shelf_row.rs  welcome.rs
