[package]
name = "shelf"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_commonmark = { version = "0.20", features = ["better_syntax_highlighting"] }
rfd = "0.15"
walkdir = "2"
genpdf = "0.2"
pulldown-cmark = "0.12"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
